# dirent

./: CMakeLists.txt  LICENSE.txt  REAMDE.md
build.x64/: .gitignore  build-me.bat  cmake-clean.txt
build32/: .gitignore  build-me.bat
src/: test-dir.cxx
